Rooster info aanpassen

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ header nav {
 header nav a {
     margin-right: 15px; 
     text-decoration: none; 
+    color: black;
 }
 /* /////////////////////////main////////////////////// */
 /* /////////////////////////info///////////////////// */
